1999-03-23  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.4.

	* IDL.h.new.in, util.h: Use G_GNUC_PRINTF on warning and error
	functions.

	* util.c: Rework IDL_tree_to_IDL logic a bit to accept more node
	types, even literals.

	* IDL.h.new.in: Add a step variable to IDL_tree_func_data.  This
	is 0 in the first call, and increments for every call thereafter
	(currently only from 0 to 1).

1999-03-22  Andrew T. Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_error): 
	(IDL_tree_warning): If node is NULL, omit file and line number
	information gracefully.

	* parser.y: Error out with better message if one tries to use a
	void type in an attribute or parameter.

	* util.c (IDL_tree_to_IDL*): If IDL_ns is NULL, output flag
	IDLF_OUTPUT_NO_QUALIFY_IDENTS is enabled automatically.

	* IDL.h.new.in: Added a flags and data field to the end of the
	IDL_tree node type, for application use. The application can
	assume these will be initialized to zero. Should be backward
	compatible with apps that don't touch it.

	* util.c (IDL_emit_IDL_type_pre): For sequences output proper
	typespec.

	* IDL.h.new.in, util.c (IDL_tree_to_IDL_string): New function;
	just like IDL_tree_to_IDL but returns a GString instead of writing
	to a file.  Useful for IDL_tree_{error,warning}.

	* IDL.h.new.in: Change functions that return glib heap strings to
	return gchar instead of char.

	* Makefile.am: Add stamp-parser to EXTRA_DIST so one isn't forced
	to regenerate parser files. Tweak stamp rule to handle a time
	change.

	* lexer.l: Strip more whitespace from cpp status. Rework start
	conditions to be compatible with standard lex (messier but
	functionally equivalent). A flex generated scanner is the
	preferred method, however.

1999-03-12  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* Makefile.am: Make parser files generation work when using
	AM_MAKEFLAGS=-j4.

1999-03-19  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (IDL.h): Add rule to autoupdate IDL.h.